added redis connection variable

--- a/README
+++ b/README
@@ -6,3 +6,5 @@ Currently supports:
 - Persistent conversation messages
 - Keeping track of new conversations count
 - Clear new conversation count
+
+Note: This code used predis, the Redis client for PHP. You can get it here: https://github.com/nrk/predis
